# hyperMCI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
hyperMCI/: __init__.py  hypergeom_dist.py  main.py
tests/: test_main.py
